<resources>
    <string name="app_name">TimesApp</string>
    <string name="pulse">pulse</string>
    <string name="or_log_in">or Log in</string>
    <string name="start_screen_welcome_text">The most interesting news in one place, specially for you</string>
    <string name="sign_up">Sign up</string>
    <string name="loading_value">%1$d %%</string>
    <string name="skip">Skip</string>
    <string name="login_text">Welcome back!</string>
    <string name="please_register_to_continue">Please register to continue</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="bottom_login_text">Please, login to continue</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
</resources>
